--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="/companyHistory" class="nav-link">Company History</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Past Work</a></li>
+            <li class="nav-item"><a href="/" class="nav-link">Past Work</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Staff</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Links</a></li>
