past work added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<%- include('../views/partials/nav.ejs')%>
+<%- include('../views/partials/nav.ejs') %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
-<%- include('../views/partials/footer.ejs')>
+<%- include('../views/partials/footer.ejs') %>
