--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -29,7 +29,9 @@
             <a href="/pastWorks" class="nav-link">Past Work</a>
           </li>
           <li class="nav-item"><a href="/staffs" class="nav-link">Staff</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+          <li class="nav-item">
+            <a href="/contacts" class="nav-link">Contact</a>
+          </li>
           <li class="nav-item"><a href="#" class="nav-link">Links</a></li>
         </ul>
       </header>
