--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -32,7 +32,7 @@
           <li class="nav-item">
             <a href="/contacts" class="nav-link">Contact</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Links</a></li>
+          <li class="nav-item"><a href="/links" class="nav-link">Links</a></li>
         </ul>
       </header>
     </div>
