--- a/views/staffs/index.ejs
+++ b/views/staffs/index.ejs
@@ -1,16 +1,19 @@
 <%- include('../partials/nav.ejs')%>
-
-<ul>
-  <% for(let i=0; i< staffs.length; i++){%>
-  <li>
-    <h3><%=staffs[i].jobTitle%></h3>
-    <p><%=staffs[i].name%></p>
-    <p><%=staffs[i].favoriteFood%></p>
-    <p><%=staffs[i].favoriteGame%></p>
-    <p><%=staffs[i].joinDate%></p>
-  </li>
-  <br />
-  <%}%>
-</ul>
+<div class="container text-center">
+  <ul style="list-style: none;">
+    <% for(let i=0; i< staffs.length; i++){%>
+    <li>
+      <h3><%=staffs[i].jobTitle%></h3>
+      <p>Name: <%=staffs[i].name%></p>
+      <p>Date Joined: <%=staffs[i].joinDate%></p>
+      <p><strong>Fun Facts:</strong></p>
+      <p>Favorite Food: <%=staffs[i].favoriteFood%></p>
+      <p>Favorite Game: <%=staffs[i].favoriteGame%></p>
+    </li>
+    <hr />
+    <%}%>
+  </ul>
+  
+</div>
 
 <%- include('../partials/footer')%>
