--- a/views/companyHistory/index.ejs
+++ b/views/companyHistory/index.ejs
@@ -1,15 +1,17 @@
 <%- include('../partials/nav.ejs')%>
 
-<h1>About Us: Pixelverse Games</h1>
+<h1 style="color: green">About Pixelverse Games</h1>
+<br>
 <h3>
-  Welcome to Pixelverse Games, the home of immersive and genre-defining RPG
+  Welcome to Pixelverse Games
+</h3>
+<p>the home of immersive and genre-defining RPG
   experiences! We are a small, passionate team of five based in the vibrant
   heart of New York City's Harlem district. Since our founding, we have
   dedicated ourselves to crafting captivating stories and visually stunning
-  sprite-based worlds that leave a lasting impact on players.
-</h3>
-<h3>Our Journey Begins</h3>
-<p>
+  sprite-based worlds that leave a lasting impact on players.</p>
+<h3>Our Journey Begins 🏁</h3>
+<p style="color: green">
   Pixelverse Games was born out of a shared love for the golden age of
   role-playing games and a desire to create unique and memorable gaming
   experiences. Our founder, [Your Name], an avid gamer and visionary, recognized
@@ -20,7 +22,7 @@
   crafted RPGs, we embarked on our journey to redefine the boundaries of
   storytelling and pixel art.
 </p>
-<h3>Unforgettable Adventures</h3>
+<h3>Unforgettable Adventures 🚀</h3>
 <p>
   At Pixelverse Games, we firmly believe that storytelling lies at the heart of
   every great RPG. Our team of talented writers, artists, and developers work
@@ -32,8 +34,8 @@
   the poignant lows, we strive to elicit a range of emotions that keep players
   engaged and invested in our worlds.
 </p>
-<h3>Visual Excellence</h3>
-<p>
+<h3>Visual Excellence 👀</h3>
+<p style="color: green">
   As lovers of retro aesthetics, we are deeply committed to the art of pixel
   perfection. Our talented artists painstakingly craft each sprite, background,
   and visual element, breathing life into our worlds. Every pixel tells a story,
@@ -44,7 +46,7 @@
   with love and attention to detail, ensuring that every frame is a work of art
   in itself.
 </p>
-<h3>Our Passionate Team</h3>
+<h3>Our Passionate Team 👨‍💻</h3>
 <p>
   Behind Pixelverse Games is a tight-knit team of five passionate individuals
   who pour their hearts and souls into every project. From the creative minds
@@ -56,8 +58,8 @@
   open communication, and allows each member to make a significant impact on our
   games.
 </p>
-<h3>Join the Pixelverse</h3>
-<p>
+<h3>Join the Pixelverse 🤝</h3>
+<p style="color: green">
   We invite you to join us on our journey through the Pixelverse. Whether you're
   a dedicated RPG enthusiast, a lover of pixel art, or simply seeking rich and
   immersive experiences, our games promise to transport you to enchanting worlds
