--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <%- include('../views/partials/nav.ejs') %>
+<div class="container text-center">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+</div>
 
 <%- include('../views/partials/footer.ejs') %>
