--- a/views/companyHistory/index.ejs
+++ b/views/companyHistory/index.ejs
@@ -1,73 +1,75 @@
 <%- include('../partials/nav.ejs')%>
+<div class="container text-center">
 
-<h1 style="color: green">About Pixelverse Games</h1>
-<br>
-<h3>
-  Welcome to Pixelverse Games
-</h3>
-<p>the home of immersive and genre-defining RPG
-  experiences! We are a small, passionate team of five based in the vibrant
-  heart of New York City's Harlem district. Since our founding, we have
-  dedicated ourselves to crafting captivating stories and visually stunning
-  sprite-based worlds that leave a lasting impact on players.</p>
-<h3>Our Journey Begins 🏁</h3>
-<p style="color: green">
-  Pixelverse Games was born out of a shared love for the golden age of
-  role-playing games and a desire to create unique and memorable gaming
-  experiences. Our founder, [Your Name], an avid gamer and visionary, recognized
-  the potential to bring together a talented group of individuals to create
-  something truly special. Established in 2030, we set up our humble studio in a
-  cozy loft in Harlem, where creativity flows freely amidst the rich cultural
-  tapestry that surrounds us. With a focus on building intimate and meticulously
-  crafted RPGs, we embarked on our journey to redefine the boundaries of
-  storytelling and pixel art.
-</p>
-<h3>Unforgettable Adventures 🚀</h3>
-<p>
-  At Pixelverse Games, we firmly believe that storytelling lies at the heart of
-  every great RPG. Our team of talented writers, artists, and developers work
-  harmoniously to bring our imaginative worlds to life. Each game we create is a
-  testament to our dedication to creating unforgettable adventures that resonate
-  with players. Weaving together intricate narratives, complex characters, and
-  meaningful choices, our games offer a depth of storytelling that draws players
-  into immersive, emotionally charged experiences. From the dramatic highs to
-  the poignant lows, we strive to elicit a range of emotions that keep players
-  engaged and invested in our worlds.
-</p>
-<h3>Visual Excellence 👀</h3>
-<p style="color: green">
-  As lovers of retro aesthetics, we are deeply committed to the art of pixel
-  perfection. Our talented artists painstakingly craft each sprite, background,
-  and visual element, breathing life into our worlds. Every pixel tells a story,
-  and we meticulously design our visuals to transport players to captivating
-  realms where their imaginations can run wild. From lush landscapes to
-  intricately designed dungeons, we bring the vibrancy and beauty of
-  sprite-based visuals to the forefront of our games. Each scene is handcrafted
-  with love and attention to detail, ensuring that every frame is a work of art
-  in itself.
-</p>
-<h3>Our Passionate Team 👨‍💻</h3>
-<p>
-  Behind Pixelverse Games is a tight-knit team of five passionate individuals
-  who pour their hearts and souls into every project. From the creative minds
-  shaping the narrative to the skilled developers meticulously coding each
-  feature, our team works in perfect synergy to bring our games to life. We
-  cherish the collaborative spirit that thrives within our studio, where ideas
-  are nurtured, risks are taken, and innovation is celebrated. By keeping our
-  team small, we maintain an environment that fosters creativity, encourages
-  open communication, and allows each member to make a significant impact on our
-  games.
-</p>
-<h3>Join the Pixelverse 🤝</h3>
-<p style="color: green">
-  We invite you to join us on our journey through the Pixelverse. Whether you're
-  a dedicated RPG enthusiast, a lover of pixel art, or simply seeking rich and
-  immersive experiences, our games promise to transport you to enchanting worlds
-  that will captivate your imagination. Stay connected with us on social media
-  and be the first to embark on new adventures. Together, let's explore
-  uncharted territories, forge unforgettable memories, and redefine what it
-  means to be a hero. Welcome to Pixelverse Games, where every pixel holds a
-  story waiting to be discovered.
-</p>
+  <h1 style="color: green">About Pixelverse Games</h1>
+  <br>
+  <h3>
+    Welcome to Pixelverse Games
+  </h3>
+  <p>The home of immersive and genre-defining RPG
+    experiences! We are a small, passionate team of four based in the vibrant
+    heart of New York City's Harlem district. Since our founding, we have
+    dedicated ourselves to crafting captivating stories and visually stunning
+    sprite-based worlds that leave a lasting impact on players.</p>
+  <h3>Our Journey Begins 🏁</h3>
+  <p style="color: green">
+    Pixelverse Games was born out of a shared love for the golden age of
+    role-playing games and a desire to create unique and memorable gaming
+    experiences. Our founders, Mamadou and Josh, avid gamers and visionaries, recognized
+    the potential to bring together a talented group of individuals to create
+    something truly special. Established in 1990, we set up our humble studio in a
+    cozy loft in Harlem, where creativity flows freely amidst the rich cultural
+    tapestry that surrounds us. With a focus on building intimate and meticulously
+    crafted RPGs, we embarked on our journey to redefine the boundaries of
+    storytelling and pixel art.
+  </p>
+  <h3>Unforgettable Adventures 🚀</h3>
+  <p>
+    At Pixelverse Games, we firmly believe that storytelling lies at the heart of
+    every great RPG. Our team of talented writers, artists, and developers work
+    harmoniously to bring our imaginative worlds to life. Each game we create is a
+    testament to our dedication to creating unforgettable adventures that resonate
+    with players. Weaving together intricate narratives, complex characters, and
+    meaningful choices, our games offer a depth of storytelling that draws players
+    into immersive, emotionally charged experiences. From the dramatic highs to
+    the poignant lows, we strive to elicit a range of emotions that keep players
+    engaged and invested in our worlds.
+  </p>
+  <h3>Visual Excellence 👀</h3>
+  <p style="color: green">
+    As lovers of retro aesthetics, we are deeply committed to the art of pixel
+    perfection. Our talented artists painstakingly craft each sprite, background,
+    and visual element, breathing life into our worlds. Every pixel tells a story,
+    and we meticulously design our visuals to transport players to captivating
+    realms where their imaginations can run wild. From lush landscapes to
+    intricately designed dungeons, we bring the vibrancy and beauty of
+    sprite-based visuals to the forefront of our games. Each scene is handcrafted
+    with love and attention to detail, ensuring that every frame is a work of art
+    in itself.
+  </p>
+  <h3>Our Passionate Team 👨‍💻</h3>
+  <p>
+    Behind Pixelverse Games is a tight-knit team of five passionate individuals
+    who pour their hearts and souls into every project. From the creative minds
+    shaping the narrative, to the skilled developers meticulously coding each
+    feature, our team works in perfect synergy to bring our games to life! We
+    cherish the collaborative spirit that thrives within our studio, where ideas
+    are nurtured, risks are taken, and innovation is celebrated. By keeping our
+    team small, we maintain an environment that fosters creativity, encourages
+    open communication, and allows each member to make a significant impact on our
+    games.
+  </p>
+  <h3>Join the Pixelverse 🤝</h3>
+  <p style="color: green">
+    We invite you to join us on our journey through the Pixelverse. Whether you're
+    a dedicated RPG enthusiast, a lover of pixel art, or simply seeking rich and
+    immersive experiences, our games promise to transport you to enchanting worlds
+    that will captivate your imagination. Stay connected with us on social media
+    and be the first to embark on new adventures. Together, let's explore
+    uncharted territories, forge unforgettable memories, and redefine what it
+    means to be a hero! Welcome to Pixelverse Games, where every pixel holds a
+    story waiting to be discovered.
+  </p>
+</div>
 
 <%- include('../partials/footer.ejs')%>
