final site structure, mvp done

--- a/views/companyHistory/index.ejs
+++ b/views/companyHistory/index.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/nav.ejs')%>
 <div class="container text-center">
 
-  <h1 style="color: green">About Pixelverse Games</h1>
+  <h1 style="color: green">About Pixelverse™ Games</h1>
   <br>
   <h3>
-    Welcome to Pixelverse Games
+    Welcome to Pixelverse™ Games
   </h3>
   <p>The home of immersive and genre-defining RPG
     experiences! We are a small, passionate team of four based in the vibrant
@@ -13,7 +13,7 @@
     sprite-based worlds that leave a lasting impact on players.</p>
   <h3>Our Journey Begins 🏁</h3>
   <p style="color: green">
-    Pixelverse Games was born out of a shared love for the golden age of
+    Pixelverse™ Games was born out of a shared love for the golden age of
     role-playing games and a desire to create unique and memorable gaming
     experiences. Our founders, Mamadou and Josh, avid gamers and visionaries, recognized
     the potential to bring together a talented group of individuals to create
@@ -25,7 +25,7 @@
   </p>
   <h3>Unforgettable Adventures 🚀</h3>
   <p>
-    At Pixelverse Games, we firmly believe that storytelling lies at the heart of
+    At Pixelverse™ Games, we firmly believe that storytelling lies at the heart of
     every great RPG. Our team of talented writers, artists, and developers work
     harmoniously to bring our imaginative worlds to life. Each game we create is a
     testament to our dedication to creating unforgettable adventures that resonate
@@ -49,7 +49,7 @@
   </p>
   <h3>Our Passionate Team 👨‍💻</h3>
   <p>
-    Behind Pixelverse Games is a tight-knit team of five passionate individuals
+    Behind Pixelverse™ Games is a tight-knit team of five passionate individuals
     who pour their hearts and souls into every project. From the creative minds
     shaping the narrative, to the skilled developers meticulously coding each
     feature, our team works in perfect synergy to bring our games to life! We
@@ -59,15 +59,15 @@
     open communication, and allows each member to make a significant impact on our
     games.
   </p>
-  <h3>Join the Pixelverse 🤝</h3>
+  <h3>Join the Pixelverse™ 🤝</h3>
   <p style="color: green">
-    We invite you to join us on our journey through the Pixelverse. Whether you're
+    We invite you to join us on our journey through the Pixelverse™. Whether you're
     a dedicated RPG enthusiast, a lover of pixel art, or simply seeking rich and
     immersive experiences, our games promise to transport you to enchanting worlds
     that will captivate your imagination. Stay connected with us on social media
     and be the first to embark on new adventures. Together, let's explore
     uncharted territories, forge unforgettable memories, and redefine what it
-    means to be a hero! Welcome to Pixelverse Games, where every pixel holds a
+    means to be a hero! Welcome to Pixelverse™ Games, where every pixel holds a
     story waiting to be discovered.
   </p>
 </div>
