--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,7 @@
 <%- include('../views/partials/nav.ejs') %>
 <div class="container text-center">
-    <h1>Welcome to <%= title %>,</h1>
-    <h3> Where every pixel holds a story waiting to be discovered!</h3>
-
+    <h1>Welcome to <%= title %>™,</h1>
+    <h3>"Where every pixel holds a story waiting to be discovered!"</h3>
 </div>
 
 <%- include('../views/partials/footer.ejs') %>
