--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,6 +16,7 @@
     ></script>
   </head>
   <body>
+    <!--nav bar-->
     <div class="container">
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
