fixed back button on pastWorks show page

--- a/views/pastWorks/show.ejs
+++ b/views/pastWorks/show.ejs
@@ -1,6 +1,9 @@
 <%- include('../partials/nav.ejs')%>
 
-<a href="/pastWorks">Back</a>
+<div class="container">
+  <a href="/pastWorks">Back</a>
+
+</div>
 <div class="container text-center">
   <h3><%=pastWork.title%></h3>
   <% if(pastWork.id === 139608){ %>
